fix navbar styles

--- a/app/main.sass
+++ b/app/main.sass
@@ -4,14 +4,15 @@ body
 
 .navbar.outline.info
     .navbar-item
-        padding: 0 10px
+        padding: 0
         height: 100%
         a
             text-decoration: none
             color: inherit
             display: block
             height: 100%
-            padding-top: 10px
+            padding: 10px
+            width: 100%
 
             &:focus
                 outline: none
